// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerResourceUpdatedEventProcessor > generateKlaviyoEvent should generate the klaviyo create profile event when the input customer ResourceUpdated event is valid and the profile is not found in Klaviyo 1`] = `
{
  "data": {
    "attributes": {
      "email": "Alfred_Lebsack@hotmail.com",
      "external_id": "77d8e6f4-2dee-4ac9-bd21-4035b6ba76d8",
      "first_name": "Jailyn",
      "last_name": "Hilll",
      "location": {
        "address1": "12, First Street",
        "address2": "",
        "city": "Brookefort",
        "country": "NL",
        "region": undefined,
        "zip": "12345",
      },
      "organization": undefined,
      "phone_number": "+393234567892",
      "title": "Miss",
    },
    "type": "profile",
  },
}
`;

exports[`CustomerResourceUpdatedEventProcessor > generateKlaviyoEvent should generate the klaviyo update profile event when the input customer ResourceUpdated event is valid 1`] = `
{
  "data": {
    "attributes": {
      "email": "Alfred_Lebsack@hotmail.com",
      "external_id": "77d8e6f4-2dee-4ac9-bd21-4035b6ba76d8",
      "first_name": "Jailyn",
      "last_name": "Hilll",
      "location": {
        "address1": "12, First Street",
        "address2": "",
        "city": "Brookefort",
        "country": "NL",
        "region": undefined,
        "zip": "12345",
      },
      "organization": undefined,
      "phone_number": "+393234567892",
      "title": "Miss",
    },
    "id": "someId",
    "type": "profile",
  },
}
`;

exports[`CustomerResourceUpdatedEventProcessor > generateKlaviyoEvent should not generate the klaviyo event when the customer is not found in CT 1`] = `
{
  "data": {
    "attributes": {
      "email": "Alfred_Lebsack@hotmail.com",
      "external_id": "77d8e6f4-2dee-4ac9-bd21-4035b6ba76d8",
      "first_name": "Jailyn",
      "last_name": "Hilll",
      "location": {
        "address1": "12, First Street",
        "address2": "",
        "city": "Brookefort",
        "country": "NL",
        "region": undefined,
        "zip": "12345",
      },
      "organization": undefined,
      "phone_number": "+393234567892",
      "title": "Miss",
    },
    "type": "profile",
  },
}
`;
